[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
regex = "1.10"
uuid = { version = "1", features = ["v4"] }
bollard = { version = "0.16", features = ["chrono", "time"] }
futures-util = "0.3"
bytes = "1.10.1"
tar = "0.4.44"
sha2 = "0.10.9"
once_cell = "1.19"
base64 = "0.22"
hyper = "1.0"
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "http2", "tokio"] }
async-trait = "0.1.89"
tower-http = { version = "0.6.6", features = ["cors"] }

[profile.dev]
opt-level = 0  # 优化级别 0-3

[profile.release]
opt-level = 3
lto = true  # 链接时优化
codegen-units = 1     # 减少并行以提高优化
strip = true          # 去除符号表
panic = "abort"       # panic 时直接终止
